force-app/main/default/objects/Document_Information__c/Document_Information__c.object-meta.xml
<CustomObject>
    <description>Deal Document Information / Loan Status Tab etc...</description>
    <label>Document Information</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Document Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>