force-app/main/default/objects/Document_Information__c/fields/Advance__c.field-meta.xml
<CustomField>
    <fullName>Advance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advance</label>
    <referenceTo>Advance__c</referenceTo>
    <relationshipLabel>Document Information</relationshipLabel>
    <relationshipName>Document_Information</relationshipName>
    <type>Lookup</type>
</CustomField>