force-app/main/default/objects/Document_Information__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Document Information</relationshipLabel>
    <relationshipName>Document_Information</relationshipName>
    <type>Lookup</type>
</CustomField>