force-app/main/default/objects/Document_Information__c/fields/Doc_String__c.field-meta.xml
<CustomField>
    <fullName>Doc_String__c</fullName>
    <label>Doc String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>