force-app/main/default/objects/Document_Information__c/fields/Exclude_From_CTC__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_CTC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From CTC</label>
    <type>Checkbox</type>
</CustomField>