force-app/main/default/objects/Document_Information__c/fields/Exclude_from_Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Loan_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Loan Status</label>
    <type>Checkbox</type>
</CustomField>