force-app/main/default/objects/Document_Information__c/fields/External_Comments__c.field-meta.xml
<CustomField>
    <fullName>External_Comments__c</fullName>
    <label>External Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>