force-app/main/default/objects/Document_Information__c/fields/Is_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Portal_User__c</fullName>
    <formula>!ISBLANK( $User.ContactId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Portal User</label>
    <type>Checkbox</type>
</CustomField>