force-app/main/default/objects/Document_Information__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <businessOwnerGroup>System_Admins</businessOwnerGroup>
    <description>Bridge Product Type from the Deal.  Used in Apex</description>
    <formula>TEXT(Deal__r.LOC_Loan_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Bridge Product Type from the Deal.  Used in Apex</inlineHelpText>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>