force-app/main/default/objects/Document_Information__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Document Information</relationshipLabel>
    <relationshipName>Document_Information</relationshipName>
    <type>Lookup</type>
</CustomField>