force-app/main/default/objects/Document_Information__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <businessOwnerGroup>System_Admins</businessOwnerGroup>
    <description>Record Type of the Deal.  Used in Apex</description>
    <formula>Deal__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordType</label>
    <type>Text</type>
</CustomField>