force-app/main/default/objects/Document_Information__c/fields/Required_for_Borrower_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Required_for_Borrower_Checklist__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Required for Borrower Checklist</label>
    <type>Checkbox</type>
</CustomField>