force-app/main/default/objects/Document_Information__c/fields/Required_for_Clear_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Required_for_Clear_to_Close__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Required for Clear to Close</label>
    <type>Checkbox</type>
</CustomField>