force-app/main/default/objects/Document_Information__c/fields/Set_to_Defaults__c.field-meta.xml
<CustomField>
    <fullName>Set_to_Defaults__c</fullName>
    <businessOwnerGroup>System_Admins</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>This will set the Document Information settings to the default controlled by the Custom Meta Data Doc Structure</description>
    <label>Set to Defaults</label>
    <type>Checkbox</type>
</CustomField>